ISSUE-295: Use some left margin

--- a/app/src/main/res/layout/bow_view_details.xml
+++ b/app/src/main/res/layout/bow_view_details.xml
@@ -15,7 +15,8 @@
 
         <EditText
             android:id="@+id/bow_name"
-            android:gravity="right"
+            android:gravity="end"
+            android:inputType="text"
             />
     </TableRow>
 
