--- a/app/src/main/res/layout/tournament_add_new.xml
+++ b/app/src/main/res/layout/tournament_add_new.xml
@@ -1,59 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:stretchColumns="*"
-    android:layout_marginEnd="10dp"
-    android:layout_marginRight="10dp"
-    >
-
-    <TableRow android:layout_width="match_parent">
-
-        <TextView
-            android:padding="3dip"
-            android:text="@string/tournament_name" />
-
-        <EditText
-            android:id="@+id/name"
-            android:gravity="end"
-            android:text="@string/tournament_default_name" />
-    </TableRow>
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ScrollView01"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:scrollbars="vertical">
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
 
 
-    <TableRow android:layout_width="match_parent" android:paddingTop="10dp">
+    <TextView
+        android:padding="3dip"
+        android:text="@string/tournament_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
-        <TextView
-            android:padding="3dip"
-            android:text="@string/tournament_type" />
-
-        <Spinner
-            android:id="@+id/tournament_constrains"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
-
-    </TableRow>
+    <EditText
+        android:id="@+id/name"
+        android:gravity="start"
+        android:text="@string/tournament_default_name"
+        android:inputType="text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 
-    <TableRow android:layout_width="match_parent" android:paddingTop="10dp">
+    <TextView
+        android:paddingTop="20dp"
+        android:paddingStart="3dp"
+        android:paddingLeft="3dp"
+        android:text="@string/tournament_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
-        <TextView
-            android:padding="3dip"
-            android:text="@string/tournament_is_tournament" />
+    <Spinner
+        android:id="@+id/tournament_constrains"
+        android:prompt="@string/tournament_type"
+        android:spinnerMode="dialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 
-        <CheckBox
-            android:gravity="end"
-            android:checked="false"
-            android:id="@+id/is_tournament"/>
-    </TableRow>
 
-    <TableRow android:layout_width="match_parent">
-        <Button
-            android:id="@+id/button"
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:onClick="createTournament"
-            android:text="@string/tournament_start" />
-    </TableRow>
+    <TextView
+        android:paddingTop="20dp"
+        android:paddingStart="3dp"
+        android:paddingLeft="3dp"
+        android:text="@string/tournament_is_tournament"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
-</TableLayout>
+    <CheckBox
+        android:gravity="end"
+        android:checked="false"
+        android:id="@+id/is_tournament"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="createTournament"
+        android:text="@string/tournament_start" />
+
+
+    </LinearLayout>
+</ScrollView>
