--- a/app/src/main/res/layout/common_view_container_arrow_stats.xml
+++ b/app/src/main/res/layout/common_view_container_arrow_stats.xml
@@ -3,12 +3,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
+    android:id="@+id/arrow_stats_scroll_layout"
     >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
+
+        <Button
+            android:id="@+id/share_button"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:onClick="exportToPdf"
+            android:layout_weight="1"
+            android:text="@string/stats_share_image"
+            />
 
 
         <TextView
@@ -50,8 +61,8 @@
                     android:padding="3dip"
                     android:text="@string/tournament_view_stats_max" />
             </TableRow>
-
         </TableLayout>
+
 
         <ImageView
             android:id="@+id/photo_view"
@@ -67,20 +78,27 @@
             android:id="@+id/tournament_series_chart"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:layout_below="@id/tournament_stats_table_data" />
+            />
 
         <com.github.mikephil.charting.charts.HorizontalBarChart
             android:id="@+id/tournament_arrows_horizontal_chart"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:layout_below="@id/tournament_series_chart"
+
             />
 
         <com.github.mikephil.charting.charts.HorizontalBarChart
             android:id="@+id/tournament_color_horizontal_chart"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:layout_below="@id/tournament_arrows_horizontal_chart"
+
             />
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:stretchColumns="*"
+            android:id="@+id/container_raw_data">
+        </TableLayout>
     </LinearLayout>
 </ScrollView>
